--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ios-session02",
+  "name": "ios-session03",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "wind-turbine.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
